--- a/supercon2/templates/training_data.html
+++ b/supercon2/templates/training_data.html
@@ -49,6 +49,7 @@
                 headers: [
                     {text: 'id', value: 'id', hidden: true},
                     {text: 'text', value: 'annotated_text', hidden: false},
+                    {text: 'status', value: 'status', hidden: false},
                     {text: 'hash', value: 'hash', hidden: false}
                 ],
                 items: []
