--- a/supercon2/templates/stats.html
+++ b/supercon2/templates/stats.html
@@ -62,26 +62,35 @@
         </div>
         <div class="row">
             <div class="col">
+                <row><Strong>Journals</Strong></row>
                 <ul>
                     {% for journal in by_journal %}
-                        <li><strong>{{ journal._id }}</strong>: {{ journal.count_docs }} documents ({{ journal.count_records }} records)</li>
+                        <li><strong>{{ journal._id }}</strong>: {{ journal.count_docs }} documents
+                            ({{ journal.count_records }} records)
+                        </li>
                     {% endfor %}
                 </ul>
             </div>
 
             <div class="col">
+                <row><Strong>Publisher</Strong></row>
                 <ul>
                     {% for publisher in by_publisher %}
-                        <li><strong>{{ publisher._id }}</strong>: {{ publisher.count_docs }} documents ({{ publisher.count_records }} records)</li>
+                        <li><strong>{{ publisher._id }}</strong>: {{ publisher.count_docs }} documents
+                            ({{ publisher.count_records }} records)
+                        </li>
                     {% endfor %}
                 </ul>
             </div>
 
 
             <div class="col">
+                <row><Strong>Year</Strong></row>
                 <ul>
                     {% for year in by_year %}
-                        <li><strong>{{ year._id }}</strong>: {{ year.count_docs }} documents ({{ year.count_records }} records)</li>
+                        <li><strong>{{ year._id }}</strong>: {{ year.count_docs }} documents ({{ year.count_records }}
+                            records)
+                        </li>
                     {% endfor %}
                 </ul>
             </div>
