--- a/supercon2/templates/index.html
+++ b/supercon2/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Supercon 2 interface</title>
+    <title>SuperCon<sup>2</sup></title>
     <link rel="icon" type="image/x-icon" href="/static/resources/img/favicon.ico"/>
     <link rel="shortcut icon" type="image/x-icon" href="static/resources/img/favicon.ico"/>
 
@@ -90,7 +90,7 @@
     </div>
 
     <footer>
-        <p><span style="color:#848484;">Contributors - 2022</span></p>
+        <p><span style="color:#848484;">&copy; Contributors, 2022 |</span> <span id="version" style="color:#848484;">unknown version</span></p>
     </footer>
 </div>
 
