--- a/supercon2/templates/database.html
+++ b/supercon2/templates/database.html
@@ -92,7 +92,7 @@
                     </v-icon>
                 </template>
             </v-data-table>
-            <p><span style="color:#848484;">&copy; Contributors, 2022 |</span> <span id="version" style="color:#848484;">unknown version</span></p>
+            <p><span style="color:#848484;">&copy; Contributors, 2022 |</span> <span id="version" style="color:#848484;">0.2</span></p>
             <v-dialog v-model="dialog">
                 <v-card>
                     <v-card-text>
