--- a/supercon2/templates/training_data.html
+++ b/supercon2/templates/training_data.html
@@ -33,7 +33,7 @@
                 <span v-html="item.annotated_text"></span>
             </template>
         </v-data-table>
-        <p><span style="color:#848484;">&copy; Contributors, 2022 |</span> <span id="version" style="color:#848484;">unknown version</span></p>
+        <p><span style="color:#848484;">&copy; Contributors, 2022 |</span> <span id="version" style="color:#848484;">0.2</span></p>
     </v-container>
 </v-app>
 <script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.js"></script>
