use min resources

--- a/supercon2/templates/document.html
+++ b/supercon2/templates/document.html
@@ -23,7 +23,7 @@
 
     <!-- X-editable -->
     <link href={{ url_for('static', filename='resources/libs/bootstrap-editable/css/bootstrap-editable.css') }} rel="stylesheet">
-    <script src={{ url_for('static', filename='resources/libs/bootstrap-editable/js/bootstrap-editable.js') }}></script>
+    <script src={{ url_for('static', filename='resources/libs/bootstrap-editable/js/bootstrap-editable.min.js') }}></script>
 
     <!-- PDF.js stuff -->
     <link type="text/css" href={{ url_for('static', filename='resources/libs/pdf.js/web/text_layer_builder.css') }} rel="stylesheet"/>
