show me_method by default #82

--- a/supercon2/templates/database.html
+++ b/supercon2/templates/database.html
@@ -167,7 +167,7 @@
                         // { text: 'Critical TemperatureId', value: 'criticalTemperatureId', hidden: true },
                         { text: 'Applied Pressure', value: 'appliedPressure', hidden: false, filter: this.appliedPressureFilter, filterKeyword: '', shouldHideEmpty: false },
                         // { text: 'Applied Pressure ID', value: 'appliedPressureId', hidden: true },
-                        { text: 'Critical Temperature Measurement Method', value: 'criticalTemperatureMeasurementMethod', hidden: true, filter: this.criticalTemperatureMeasurementMethodFilter, filterKeyword: '', shouldHideEmpty: false },
+                        { text: 'Critical Temperature Measurement Method', value: 'criticalTemperatureMeasurementMethod', hidden: false, filter: this.criticalTemperatureMeasurementMethodFilter, filterKeyword: '', shouldHideEmpty: false },
                         // { text: 'Critical Temperature Measurement MethodId', value: 'criticalTemperatureMeasurementMethodId', hidden: true },
                         { text: 'Link Type', value: 'linkType', hidden: true, filter: this.linkTypeFilter, filterKeyword: '', shouldHideEmpty: false },
                         { text: 'Section', value: 'section', hidden: true, filter: this.sectionFilter, filterKeyword: '', shouldHideEmpty: false },
